// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationAdminPage /> renders correctly 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "argumentDefinitions": Array [],
          "kind": "Fragment",
          "metadata": null,
          "name": "RegistrationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "RegistrationForm",
              "kind": "LinkedField",
              "name": "registrationForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isIndexationDone",
                  "storageKey": null,
                },
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "RegistrationFormQuestions_registrationForm",
                },
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "RegistrationFormCommunication_registrationForm",
                },
              ],
              "storageKey": null,
            },
          ],
          "type": "Query",
        },
        "hash": "59d9834b02853e7bfc78230e4e9ba6a2",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [],
          "kind": "Operation",
          "name": "RegistrationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "RegistrationForm",
              "kind": "LinkedField",
              "name": "registrationForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": null,
                  "kind": "LinkedField",
                  "name": "questions",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "id",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "__typename",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "title",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "number",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "private",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "position",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "required",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "hidden",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "helpText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": Array [
                        Object {
                          "kind": "Literal",
                          "name": "orderBy",
                          "value": Object {
                            "direction": "ASC",
                            "field": "POSITION",
                          },
                        },
                      ],
                      "concreteType": "LogicJump",
                      "kind": "LinkedField",
                      "name": "jumps",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": null,
                          "kind": "LinkedField",
                          "name": "origin",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": null,
                          "kind": "LinkedField",
                          "name": "destination",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "title",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "number",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                          "kind": "LinkedField",
                          "name": "conditions",
                          "plural": true,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "operator",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": null,
                              "kind": "LinkedField",
                              "name": "question",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "__typename",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "title",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "type",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "QuestionChoice",
                              "kind": "LinkedField",
                              "name": "value",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "title",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                      ],
                      "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": null,
                      "kind": "LinkedField",
                      "name": "alwaysJumpDestinationQuestion",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "__typename",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "title",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "number",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "description",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "type",
                      "storageKey": null,
                    },
                    Object {
                      "kind": "InlineFragment",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "isOtherAllowed",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "randomQuestionChoices",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "MultipleChoiceQuestionValidationRule",
                          "kind": "LinkedField",
                          "name": "validationRule",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "type",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "number",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": Array [
                            Object {
                              "kind": "Literal",
                              "name": "allowRandomize",
                              "value": false,
                            },
                          ],
                          "concreteType": "QuestionChoiceConnection",
                          "kind": "LinkedField",
                          "name": "choices",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "PageInfo",
                              "kind": "LinkedField",
                              "name": "pageInfo",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "hasNextPage",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "totalCount",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "QuestionChoiceEdge",
                              "kind": "LinkedField",
                              "name": "edges",
                              "plural": true,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "QuestionChoice",
                                  "kind": "LinkedField",
                                  "name": "node",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "title",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "description",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "color",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "Media",
                                      "kind": "LinkedField",
                                      "name": "image",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": "choices(allowRandomize:false)",
                        },
                      ],
                      "type": "MultipleChoiceQuestion",
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "topTextDisplayed",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "bottomTextDisplayed",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "RegistrationFormTranslation",
                  "kind": "LinkedField",
                  "name": "translations",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "topText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "bottomText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "locale",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isIndexationDone",
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "id": null,
          "metadata": Object {},
          "name": "RegistrationAdminPageQuery",
          "operationKind": "query",
          "text": "query RegistrationAdminPageQuery {
  registrationForm {
    ...RegistrationFormQuestions_registrationForm
    ...RegistrationFormCommunication_registrationForm
    isIndexationDone
    id
  }
}

fragment RegistrationFormCommunication_registrationForm on RegistrationForm {
  id
  topTextDisplayed
  bottomTextDisplayed
  translations {
    topText
    bottomText
    locale
  }
}

fragment RegistrationFormQuestions_registrationForm on RegistrationForm {
  id
  questions {
    id
    __typename
    title
    number
    private
    position
    required
    hidden
    helpText
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      validationRule {
        type
        number
      }
      choices(allowRandomize: false) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}
",
        },
      }
    }
    render={[Function]}
    variables={Object {}}
  />
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3
        className="box-title"
      >
        <FormattedMessage
          id="allow"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="allow-registration"
          values={Object {}}
        />
      </div>
      <h4>
        <FormattedMessage
          id="allow"
          values={Object {}}
        />
      </h4>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="limit-registration-to-some-domains"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3>
        <FormattedMessage
          id="received-data"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={true}
          disabled={true}
        />
        <FormattedMessage
          id="global.fullname"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={true}
          disabled={true}
        />
        <FormattedMessage
          id="registration.password"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="user.register.zipcode"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="registration.type"
          values={Object {}}
        />
      </div>
      <Well
        bsClass="div"
      >
        <p
          className="mt-10"
        >
          <strong>
            <FormattedMessage
              id="more-fields"
              values={Object {}}
            />
          </strong>
        </p>
        <ReactRelayQueryRenderer
          environment={"RelayModernEnvironment()"}
          query={
            Object {
              "fragment": Object {
                "argumentDefinitions": Array [],
                "kind": "Fragment",
                "metadata": null,
                "name": "RegistrationAdminPageQuery",
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "concreteType": "RegistrationForm",
                    "kind": "LinkedField",
                    "name": "registrationForm",
                    "plural": false,
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "isIndexationDone",
                        "storageKey": null,
                      },
                      Object {
                        "args": null,
                        "kind": "FragmentSpread",
                        "name": "RegistrationFormQuestions_registrationForm",
                      },
                      Object {
                        "args": null,
                        "kind": "FragmentSpread",
                        "name": "RegistrationFormCommunication_registrationForm",
                      },
                    ],
                    "storageKey": null,
                  },
                ],
                "type": "Query",
              },
              "hash": "59d9834b02853e7bfc78230e4e9ba6a2",
              "kind": "Request",
              "operation": Object {
                "argumentDefinitions": Array [],
                "kind": "Operation",
                "name": "RegistrationAdminPageQuery",
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "concreteType": "RegistrationForm",
                    "kind": "LinkedField",
                    "name": "registrationForm",
                    "plural": false,
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "id",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "questions",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "number",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "private",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "position",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "required",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "hidden",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "helpText",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": Array [
                              Object {
                                "kind": "Literal",
                                "name": "orderBy",
                                "value": Object {
                                  "direction": "ASC",
                                  "field": "POSITION",
                                },
                              },
                            ],
                            "concreteType": "LogicJump",
                            "kind": "LinkedField",
                            "name": "jumps",
                            "plural": true,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": null,
                                "kind": "LinkedField",
                                "name": "origin",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "__typename",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": null,
                                "kind": "LinkedField",
                                "name": "destination",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "__typename",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "number",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                                "kind": "LinkedField",
                                "name": "conditions",
                                "plural": true,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "operator",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": null,
                                    "kind": "LinkedField",
                                    "name": "question",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "__typename",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "id",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "title",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "type",
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "QuestionChoice",
                                    "kind": "LinkedField",
                                    "name": "value",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "id",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "title",
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "alwaysJumpDestinationQuestion",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "description",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "type",
                            "storageKey": null,
                          },
                          Object {
                            "kind": "InlineFragment",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "isOtherAllowed",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "randomQuestionChoices",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "MultipleChoiceQuestionValidationRule",
                                "kind": "LinkedField",
                                "name": "validationRule",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "type",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "number",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": Array [
                                  Object {
                                    "kind": "Literal",
                                    "name": "allowRandomize",
                                    "value": false,
                                  },
                                ],
                                "concreteType": "QuestionChoiceConnection",
                                "kind": "LinkedField",
                                "name": "choices",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "PageInfo",
                                    "kind": "LinkedField",
                                    "name": "pageInfo",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "hasNextPage",
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "totalCount",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "QuestionChoiceEdge",
                                    "kind": "LinkedField",
                                    "name": "edges",
                                    "plural": true,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "concreteType": "QuestionChoice",
                                        "kind": "LinkedField",
                                        "name": "node",
                                        "plural": false,
                                        "selections": Array [
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "id",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "title",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "description",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "color",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "concreteType": "Media",
                                            "kind": "LinkedField",
                                            "name": "image",
                                            "plural": false,
                                            "selections": Array [
                                              Object {
                                                "alias": null,
                                                "args": null,
                                                "kind": "ScalarField",
                                                "name": "id",
                                                "storageKey": null,
                                              },
                                              Object {
                                                "alias": null,
                                                "args": null,
                                                "kind": "ScalarField",
                                                "name": "url",
                                                "storageKey": null,
                                              },
                                            ],
                                            "storageKey": null,
                                          },
                                        ],
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": "choices(allowRandomize:false)",
                              },
                            ],
                            "type": "MultipleChoiceQuestion",
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "topTextDisplayed",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "bottomTextDisplayed",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "RegistrationFormTranslation",
                        "kind": "LinkedField",
                        "name": "translations",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "topText",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "bottomText",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "locale",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "isIndexationDone",
                        "storageKey": null,
                      },
                    ],
                    "storageKey": null,
                  },
                ],
              },
              "params": Object {
                "id": null,
                "metadata": Object {},
                "name": "RegistrationAdminPageQuery",
                "operationKind": "query",
                "text": "query RegistrationAdminPageQuery {
  registrationForm {
    ...RegistrationFormQuestions_registrationForm
    ...RegistrationFormCommunication_registrationForm
    isIndexationDone
    id
  }
}

fragment RegistrationFormCommunication_registrationForm on RegistrationForm {
  id
  topTextDisplayed
  bottomTextDisplayed
  translations {
    topText
    bottomText
    locale
  }
}

fragment RegistrationFormQuestions_registrationForm on RegistrationForm {
  id
  questions {
    id
    __typename
    title
    number
    private
    position
    required
    hidden
    helpText
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      validationRule {
        type
        number
      }
      choices(allowRandomize: false) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}
",
              },
            }
          }
          render={[Function]}
          variables={Object {}}
        />
      </Well>
    </div>
  </div>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3>
        <FormattedMessage
          id="capco.module.newsletter"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          disabled={false}
          onChange={[Function]}
        />
        <span>
          <strong>
            <FormattedMessage
              id="request-consent-to-receive-information-related-to-the-platform"
              values={Object {}}
            />
          </strong>
        </span>
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <span>
          <strong>
            <FormattedMessage
              id="registration.enable_consent_external_communication.title"
              values={Object {}}
            />
          </strong>
          <br />
          <FormattedMessage
            id="registration.enable_consent_external_communication.subtitle"
            values={
              Object {
                "link": <a
                  className="external-link"
                  href="http://localhost/admin/settings/settings.global/list"
                >
                  <FormattedMessage
                    id="global.general"
                    values={Object {}}
                  />
                </a>,
              }
            }
          />
        </span>
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          disabled={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="i-am-not-a-bot"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <Relay(Connect(ReduxForm))
    query={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
  />
</Fragment>
`;

exports[`<RegistrationAdminPage /> renders correctly when not super admin 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "argumentDefinitions": Array [],
          "kind": "Fragment",
          "metadata": null,
          "name": "RegistrationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "RegistrationForm",
              "kind": "LinkedField",
              "name": "registrationForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isIndexationDone",
                  "storageKey": null,
                },
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "RegistrationFormQuestions_registrationForm",
                },
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "RegistrationFormCommunication_registrationForm",
                },
              ],
              "storageKey": null,
            },
          ],
          "type": "Query",
        },
        "hash": "59d9834b02853e7bfc78230e4e9ba6a2",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [],
          "kind": "Operation",
          "name": "RegistrationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "RegistrationForm",
              "kind": "LinkedField",
              "name": "registrationForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": null,
                  "kind": "LinkedField",
                  "name": "questions",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "id",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "__typename",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "title",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "number",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "private",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "position",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "required",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "hidden",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "helpText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": Array [
                        Object {
                          "kind": "Literal",
                          "name": "orderBy",
                          "value": Object {
                            "direction": "ASC",
                            "field": "POSITION",
                          },
                        },
                      ],
                      "concreteType": "LogicJump",
                      "kind": "LinkedField",
                      "name": "jumps",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": null,
                          "kind": "LinkedField",
                          "name": "origin",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": null,
                          "kind": "LinkedField",
                          "name": "destination",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "title",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "number",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                          "kind": "LinkedField",
                          "name": "conditions",
                          "plural": true,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "operator",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": null,
                              "kind": "LinkedField",
                              "name": "question",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "__typename",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "title",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "type",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "QuestionChoice",
                              "kind": "LinkedField",
                              "name": "value",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "title",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                      ],
                      "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": null,
                      "kind": "LinkedField",
                      "name": "alwaysJumpDestinationQuestion",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "__typename",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "title",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "number",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "description",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "type",
                      "storageKey": null,
                    },
                    Object {
                      "kind": "InlineFragment",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "isOtherAllowed",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "randomQuestionChoices",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "MultipleChoiceQuestionValidationRule",
                          "kind": "LinkedField",
                          "name": "validationRule",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "type",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "number",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": Array [
                            Object {
                              "kind": "Literal",
                              "name": "allowRandomize",
                              "value": false,
                            },
                          ],
                          "concreteType": "QuestionChoiceConnection",
                          "kind": "LinkedField",
                          "name": "choices",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "PageInfo",
                              "kind": "LinkedField",
                              "name": "pageInfo",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "hasNextPage",
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "totalCount",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "QuestionChoiceEdge",
                              "kind": "LinkedField",
                              "name": "edges",
                              "plural": true,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "QuestionChoice",
                                  "kind": "LinkedField",
                                  "name": "node",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "title",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "description",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "color",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "Media",
                                      "kind": "LinkedField",
                                      "name": "image",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": "choices(allowRandomize:false)",
                        },
                      ],
                      "type": "MultipleChoiceQuestion",
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "topTextDisplayed",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "bottomTextDisplayed",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "RegistrationFormTranslation",
                  "kind": "LinkedField",
                  "name": "translations",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "topText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "bottomText",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "locale",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isIndexationDone",
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "id": null,
          "metadata": Object {},
          "name": "RegistrationAdminPageQuery",
          "operationKind": "query",
          "text": "query RegistrationAdminPageQuery {
  registrationForm {
    ...RegistrationFormQuestions_registrationForm
    ...RegistrationFormCommunication_registrationForm
    isIndexationDone
    id
  }
}

fragment RegistrationFormCommunication_registrationForm on RegistrationForm {
  id
  topTextDisplayed
  bottomTextDisplayed
  translations {
    topText
    bottomText
    locale
  }
}

fragment RegistrationFormQuestions_registrationForm on RegistrationForm {
  id
  questions {
    id
    __typename
    title
    number
    private
    position
    required
    hidden
    helpText
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      validationRule {
        type
        number
      }
      choices(allowRandomize: false) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}
",
        },
      }
    }
    render={[Function]}
    variables={Object {}}
  />
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3
        className="box-title"
      >
        <FormattedMessage
          id="allow"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="allow-registration"
          values={Object {}}
        />
      </div>
      <h4>
        <FormattedMessage
          id="allow"
          values={Object {}}
        />
      </h4>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="limit-registration-to-some-domains"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3>
        <FormattedMessage
          id="received-data"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={true}
          disabled={true}
        />
        <FormattedMessage
          id="global.fullname"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={true}
          disabled={true}
        />
        <FormattedMessage
          id="registration.password"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="user.register.zipcode"
          values={Object {}}
        />
      </div>
      <div
        className="d-flex align-items-baseline mb-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <FormattedMessage
          id="registration.type"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-content box-content__content-form"
    >
      <h3>
        <FormattedMessage
          id="capco.module.newsletter"
          values={Object {}}
        />
      </h3>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          disabled={true}
          onChange={[Function]}
        />
        <span>
          <strong>
            <FormattedMessage
              id="request-consent-to-receive-information-related-to-the-platform"
              values={Object {}}
            />
          </strong>
        </span>
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          onChange={[Function]}
        />
        <span>
          <strong>
            <FormattedMessage
              id="registration.enable_consent_external_communication.title"
              values={Object {}}
            />
          </strong>
          <br />
          <FormattedMessage
            id="registration.enable_consent_external_communication.subtitle"
            values={
              Object {
                "link": <a
                  className="external-link"
                  href="http://localhost/admin/settings/settings.global/list"
                >
                  <FormattedMessage
                    id="global.general"
                    values={Object {}}
                  />
                </a>,
              }
            }
          />
        </span>
      </div>
      <div
        className="d-flex align-items-baseline mb-15 mt-15"
      >
        <_default
          checked={false}
          disabled={true}
          onChange={[Function]}
        />
        <FormattedMessage
          id="i-am-not-a-bot"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <Relay(Connect(ReduxForm))
    query={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
  />
</Fragment>
`;
